# nlp-ml-repo-clean

./: .gitattributes  .gitignore  README.md  pyproject.toml  text_similarity_report.csv
kcworks_nlp_tools/: config.py  dependencies.py  kcworks_downloader.py  logging_config.py  text_extractor.py
legacy/stage2/: apiinvenio_ninth.py  examine_output9.py
legacy/stage3/: csv_preprocessing_minimal.py
legacy/stage4/: bert_embedding_test.py  examine_bert_embedding_test.py  learningnotes.md
stage1/: tutorial1-textout.md  tutorial2-cli.md
stage2/: apiinvenio_ninth.py  examine_output9.py  output9_analysis_report.csv
stage3/: csv-preprocessing2.py  csv_preprocessing_minimal.py  examine_processed_outputcsv.py  examineprocessed_outputcsv.py
stage4/: bert_embedding_test.py  embedding_statistics_report.csv  examine_bert_embedding_test.py  learningnotes.md  ml-step1.py
workused/: collection_materials_used.md
